Minor edit in notebook

--- a/main_notebook.ipynb
+++ b/main_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "b5fcd472",
    "metadata": {},
    "outputs": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "39dc2615",
    "metadata": {},
    "outputs": [
@@ -58,7 +58,7 @@
          "type": "integer"
         }
        ],
-       "ref": "4282cc76-57ee-4974-b4f1-da2d527cc117",
+       "ref": "eb05a4dc-173a-49b7-8831-64616f6ef0da",
        "rows": [
         [
          "0",
@@ -175,7 +175,7 @@
        "4       chr8   53744200   53744400      0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "eee14891",
    "metadata": {},
    "outputs": [
@@ -199,7 +199,7 @@
        "(13686202, 4)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,8 +210,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "43c466d8",
+   "execution_count": 2,
+   "id": "b80adf9e",
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
          "type": "integer"
         }
        ],
-       "ref": "0de789da-5b3e-4dc6-8477-78e5f921b66a",
+       "ref": "685ed876-8829-4f37-a387-62b086794829",
        "rows": [
         [
          "0",
@@ -252,13 +252,276 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df['label'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "43c466d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "('Chromosome', 'label')",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "count",
+         "rawType": "int64",
+         "type": "integer"
+        }
+       ],
+       "ref": "518c4523-9a33-48e2-a86d-17e34ac20feb",
+       "rows": [
+        [
+         "('chr1', np.int64(0))",
+         "1175902"
+        ],
+        [
+         "('chr1', np.int64(1))",
+         "7949"
+        ],
+        [
+         "('chr10', np.int64(0))",
+         "637934"
+        ],
+        [
+         "('chr10', np.int64(1))",
+         "3843"
+        ],
+        [
+         "('chr11', np.int64(0))",
+         "634038"
+        ],
+        [
+         "('chr11', np.int64(1))",
+         "4555"
+        ],
+        [
+         "('chr12', np.int64(0))",
+         "629382"
+        ],
+        [
+         "('chr12', np.int64(1))",
+         "4323"
+        ],
+        [
+         "('chr13', np.int64(0))",
+         "549793"
+        ],
+        [
+         "('chr13', np.int64(1))",
+         "1974"
+        ],
+        [
+         "('chr14', np.int64(0))",
+         "509224"
+        ],
+        [
+         "('chr14', np.int64(1))",
+         "2770"
+        ],
+        [
+         "('chr15', np.int64(0))",
+         "487436"
+        ],
+        [
+         "('chr15', np.int64(1))",
+         "2668"
+        ],
+        [
+         "('chr16', np.int64(0))",
+         "427199"
+        ],
+        [
+         "('chr16', np.int64(1))",
+         "2855"
+        ],
+        [
+         "('chr17', np.int64(0))",
+         "378688"
+        ],
+        [
+         "('chr17', np.int64(1))",
+         "3748"
+        ],
+        [
+         "('chr18', np.int64(0))",
+         "368397"
+        ],
+        [
+         "('chr18', np.int64(1))",
+         "1773"
+        ],
+        [
+         "('chr19', np.int64(0))",
+         "277716"
+        ],
+        [
+         "('chr19', np.int64(1))",
+         "3133"
+        ],
+        [
+         "('chr2', np.int64(0))",
+         "1145688"
+        ],
+        [
+         "('chr2', np.int64(1))",
+         "6321"
+        ],
+        [
+         "('chr20', np.int64(0))",
+         "294325"
+        ],
+        [
+         "('chr20', np.int64(1))",
+         "2342"
+        ],
+        [
+         "('chr21', np.int64(0))",
+         "231049"
+        ],
+        [
+         "('chr21', np.int64(1))",
+         "817"
+        ],
+        [
+         "('chr22', np.int64(0))",
+         "243797"
+        ],
+        [
+         "('chr22', np.int64(1))",
+         "1641"
+        ],
+        [
+         "('chr3', np.int64(0))",
+         "932735"
+        ],
+        [
+         "('chr3', np.int64(1))",
+         "5302"
+        ],
+        [
+         "('chr4', np.int64(0))",
+         "907507"
+        ],
+        [
+         "('chr4', np.int64(1))",
+         "3834"
+        ],
+        [
+         "('chr5', np.int64(0))",
+         "853522"
+        ],
+        [
+         "('chr5', np.int64(1))",
+         "4458"
+        ],
+        [
+         "('chr6', np.int64(0))",
+         "805002"
+        ],
+        [
+         "('chr6', np.int64(1))",
+         "4715"
+        ],
+        [
+         "('chr7', np.int64(0))",
+         "753142"
+        ],
+        [
+         "('chr7', np.int64(1))",
+         "3987"
+        ],
+        [
+         "('chr8', np.int64(0))",
+         "691061"
+        ],
+        [
+         "('chr8', np.int64(1))",
+         "3633"
+        ],
+        [
+         "('chr9', np.int64(0))",
+         "672593"
+        ],
+        [
+         "('chr9', np.int64(1))",
+         "3431"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 44
+       }
+      },
+      "text/plain": [
+       "Chromosome  label\n",
+       "chr1        0        1175902\n",
+       "            1           7949\n",
+       "chr10       0         637934\n",
+       "            1           3843\n",
+       "chr11       0         634038\n",
+       "            1           4555\n",
+       "chr12       0         629382\n",
+       "            1           4323\n",
+       "chr13       0         549793\n",
+       "            1           1974\n",
+       "chr14       0         509224\n",
+       "            1           2770\n",
+       "chr15       0         487436\n",
+       "            1           2668\n",
+       "chr16       0         427199\n",
+       "            1           2855\n",
+       "chr17       0         378688\n",
+       "            1           3748\n",
+       "chr18       0         368397\n",
+       "            1           1773\n",
+       "chr19       0         277716\n",
+       "            1           3133\n",
+       "chr2        0        1145688\n",
+       "            1           6321\n",
+       "chr20       0         294325\n",
+       "            1           2342\n",
+       "chr21       0         231049\n",
+       "            1            817\n",
+       "chr22       0         243797\n",
+       "            1           1641\n",
+       "chr3        0         932735\n",
+       "            1           5302\n",
+       "chr4        0         907507\n",
+       "            1           3834\n",
+       "chr5        0         853522\n",
+       "            1           4458\n",
+       "chr6        0         805002\n",
+       "            1           4715\n",
+       "chr7        0         753142\n",
+       "            1           3987\n",
+       "chr8        0         691061\n",
+       "            1           3633\n",
+       "chr9        0         672593\n",
+       "            1           3431\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby('Chromosome')['label'].value_counts()"
    ]
   }
  ],
